# hh_parser

./: .env.default  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
backend/: __main__.py  app.py  config.py  db.py  models.py  schemas.py
backend/parser/: hh.py
backend/repo/: vacancies.py
backend/view/: vacancies.py
migrations/: env.py
migrations/versions/: 36a39dbabb71_description_added.py  39639a88cc20_.py  b1f0b5353319_status_added.py
