[tool.poetry]
name = "hh_parser"
version = "0.1.0"
description = ""
authors = ["Valexandrin <alex-vadim@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
pydantic = "^1.9.1"
SQLAlchemy = "^1.4.37"
requests = "^2.27.1"
psycopg2-binary = "^2.9.3"
alembic = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
